[package]
name = "Bevy_AI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bevy = "0.13.2"
openai_api_rust = "0.1.9"
reqwest = { version = "0.12.4", features = ["blocking"] }
image = "0.25.1"
bevy_pancam = "0.11.1"
noise = "0.9.0"
rand = "0.8.5"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
